--- a/YuPiFriendBackGroud/src/main/resources/application.yml
+++ b/YuPiFriendBackGroud/src/main/resources/application.yml
@@ -6,10 +6,17 @@ spring:
     url: jdbc:mysql://localhost:3306/yupifriend?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: 123456
-  servlet:
-    multipart:
-      max-file-size: 500MB
-      max-request-size: 100MB
+  session:
+    timeout: 120
+
 
 server:
   port: 8080
+
+
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: is_delete # 全局逻辑删除的实体字段名(since 3.3.0)
+      logic-delete-value: 1 # 逻辑已删除
+      logic-not-delete-value: 0 # 逻辑未删除
