--- a/YuPiFriendBackGroud/src/main/resources/application.yml
+++ b/YuPiFriendBackGroud/src/main/resources/application.yml
@@ -7,11 +7,13 @@ spring:
     username: root
     password: 123456
   session:
-    timeout: 120
+    timeout: 3600
 
 
 server:
   port: 8080
+  servlet:
+    context-path: /api
 
 
 mybatis-plus:
