--- a/YuPiFriendBackGroud/src/main/resources/application-prod.yml
+++ b/YuPiFriendBackGroud/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://82.157.244.162:3306/user_center?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-    username: root
+    url: jdbc:mysql://82.157.244.162:3306/user-center?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: zhangjiawei
     password: Zjw2812967137!
   session:
     timeout: 3600
